--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mongo-schema-repoter",
+  "name": "mongo-schema-reporter",
   "version": "1.0.0",
   "scripts": {
     "build": "tsc -b",
